--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.2.13",
+    "primereact": "^10.8.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
