--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/poppins": "^5.1.1",
     "emailjs-com": "^3.2.0",
     "next": "14.2.13",
     "primereact": "^10.8.4",
